// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-14lcx2t-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-5ty0a-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-13tessn-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-13tessn-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-k8fscd-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-oli2n-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;
